Added backup fonts in case they didn't load

--- a/css/custom.css
+++ b/css/custom.css
@@ -665,5 +665,5 @@ div.item.col-sm-12 {
 
 .interests{
   font-size: 20px;
-  font-family: 'Courgette', cursive;
+  font-family: 'Courgette', cursive, Arial, sans-serif;
 }
